--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,8 +40,10 @@
         \n\nAplikasi ini dibuat untuk Asesmen1 MobPro 1. \n\n Copyright© 2024 Andre Masalle\nAll Rights Reserved</string>
     <string name="kembali">Kembali</string>
     <string name="bagikan">Bagikan</string>
+
     <string name="bagikan_template">Poin Anda: %1$s</string>
     <string name="soal1">Orang tua adit memiliki pabrik coklat yang besar,         suatu hari dia memutuskan untuk membagikan 1683 coklat ke 99 temannya.         \\n Berapakah jumlah coklat yang diperoleh masing-masing temannya?</string>
 
+    <string name="liat_skor">Liat skor</string>
 
 </resources>
