--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,4 +29,6 @@
     <string name="pertanyaan1">Adit\'s parents own a large chocolate factory.\n One day, he decided to distribute 1683 chocolates to his 99 friends. \n\nHow many chocolates did each of his friends receive?</string>
     <string name="pertanyaan2">A triangle is placed inside a square, which is placed inside a regular octagon.  \n\nDetermine the area of the triangle.</string>
     <string name="liat_skor">See score</string>
+    <string name="skor">Your score</string>
+    <string name="list_kosong">You had not done any quiz</string>
 </resources>
